# Family_tasker

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  index.html  pyproject.toml  requirements.txt
docker/: .dockerignore  Dockerfile
migrations/: env.py
migrations/versions/: 2024_03_05_0009-c4fc9dafa23e_.py  2024_04_05_1143-c23aa3acfc15_.py  2024_04_10_1600-8427009a833b_.py  2024_12_30_2236-5e961f46c0e9_initial_migration.py  2025_01_05_1459-2cbeeca1e60a_.py
redis_data/: dump.rdb
src/: main.py
src/DB/: db.sqlite3
src/api/tasks/: config.py  crud.py  models.py  schemas.py  views.py
src/api_v1/: __init__.py
src/api_v1/tasks/: __init__.py  crud.py  schemas.py  views.py
src/auth/: __init__.py  auth.py  jwt.py  security.py
src/core/: __init__.py  config.py  dependencies.py
src/core/models/: __init__.py  base.py  base_model.py  db_helper.py  default_values.py  task.py  tasks.py  (+1 more)
src/database/: __init__.py  database.sqlite3  db_helper.py  test_database.sqlite3
src/project/: __init__.py  config.py  exceptions.py
src/repositories/: __init__.py  tasks.py  users.py
src/routers/: __init__.py  tasks.py  users.py
src/services/: __init__.py  tasks.py  users.py
src/utils/: __init__.py  base_repository.py  base_unitofwork.py  db_helper.py  sqlalchemy_repository.py  sqlalchemy_unitofwork.py
src1/: .env
src1/core/: dependencies.py
src1/repositories/: db_helper.py  repository.py  tasks.py
src1/routers/: tasks.py
src1/services/: tasks.py
tests/: .env  conftest.py  conftests.py
tests/tasks/: conftest.py  test_routers.py
(+51 files in other folders)
