[tool.poetry]
name = "familytasker"
version = "0.1.0"
description = ""
authors = ["plo96 <plo96@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
psycopg = "^3.1.18"
fastui = "^0.5.2"
python-multipart = "^0.0.9"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
faker = "^24.2.0"
mypy = "^1.9.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
